--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--2">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284868.es-419">ProInversión inicia capacitación a gobiernos regionales y locales en APP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/first-uk-paraguay-trade-and-investment-forum-took-place-in-london--2">First UK – Paraguay Trade and Investment Forum took place in London</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--32">Turks and Caicos Islands post Cabinet meeting statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/womens-leadership-conference--3">Women’s Leadership Conference</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/213614.es-419">Embajador Benjamin designado Alto Comisionado en Ghana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/295678.pt">#LOVEisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--2">British expatriates - it’s your vote, don’t lose it</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/remembrance-sunday">Remembrance Sunday</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/aviation-security-update">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--7">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-uk-ambassador-and-permanent-representative-to-the-united-nations-and-other-international-organisations-in-geneva-14-april-2015--2">New UK Ambassador and Permanent Representative to the UN and Other International Organisations in Geneva</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/business-secretary-visits-recife-to-strengthen-education-ties--2">Business Secretary visits Recife to strengthen education ties</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--8">英國貿易投資署和英國智慧財產權官員協助蘇格蘭威士忌協會打擊中國侵權，成功捍衛蘇格蘭原產地地理標示資格</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257525.ar">قام سفير صاحبة الجلالة البريطانية بإلقاء كلمة أمام خادم الحرمين الشريفين الملك عبد الله خلال حفل تقديم أوراق اعتماد السفراء الذي تم عقده في جدة</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/professor-charles-hendry-the-prime-minister-s-trade-envoy-to-kazakhstan-visits-kazakhstan">Professor Charles Hendry, the Prime Minister’s Trade Envoy to Kazakhstan, visits Kazakhstan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/statement-from-the-british-ambassador-to-bahrain--2">Statement from the British Ambassador to Bahrain</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
