--- a/document-types/statutory_instrument.html
+++ b/document-types/statutory_instrument.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-control-of-mercury-amendment-eu-exit-regulations-2018">The Control of Mercury (Amendment) (EU Exit) Regulations 2018</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-electronic-identification-and-trust-services-for-electronic-transactions-amendment-eu-exit-regulations-2018">The Electronic Identification and Trust Services for Electronic Transactions (Amendment etc.) (EU Exit) Regulations 2018</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-human-medicines-amendment-etc-eu-exit-no-2-and-the-medical-devices-amendment-etc-eu-exit-no-2-regulations-2019">The Human Medicines (Amendment etc.) (EU Exit) (No. 2) and the Medical Devices (Amendment etc.) (EU Exit) (No. 2) Regulations 2019</a></li>
-<li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-freedom-of-information-act-2000-amendment-eu-exit-regulations-2018">The Freedom of Information Act 2000 (Amendment) (EU Exit) Regulations 2018</a></li>
+<li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-social-security-reciprocal-agreements-miscellaneous-amendments-european-union-exit-regulations-2021">The Social Security (Reciprocal Agreements) (Miscellaneous Amendments) (European Union Exit) Regulations 2021</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=statutory_instrument&amp;count=10">Source query from Search API</a></p>
 
