--- a/apps/email-alert-api/api.html
+++ b/apps/email-alert-api/api.html
@@ -364,7 +364,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/email-alert-api/commit/e37d8eb957320a0a309012b0117f1956abe86b7c">7 Jan 2021</a>
+  Last updated: <a href="https://github.com/alphagov/email-alert-api/commit/b7040286b8e24400d2aa08146f1e545d7a3ba7cc">23 Jun 2021</a>
 </div>
 
   <h1 class="page-title">email-alert-api: Available endpoints</h1>
@@ -541,6 +541,28 @@ new frequency.</p>
 destination with a query string of token and a <a href="https://jwt.io/">JWT</a> token.
 Returns a 201 status code on success or 404 if the subscriber is not known
 to Email Alert API.</p>
+<h3 id="post-subscribersgovuk-account"><code>POST /subscribers/govuk-account</code></h3>
+<pre lang="json"><code>{
+  "govuk_account_session": "session-token-from-account-header"
+}
+</code></pre>
+<p>Checks if the given GOV.UK account has a verified email address which
+matches a subscriber and, if so, returns the subscriber in the form</p>
+<pre lang="json"><code>{
+  "subscriber": {
+    "id": 1,
+    "address": "test@example.com",
+    "created_at": "Wed, 07 Mar 2018 17:04:28 UTC +00:00",
+    "updated_at": "Wed, 07 Mar 2018 17:04:28 UTC +00:00",
+  }
+}
+</code></pre>
+<p>Returns a 401 if the account session identifier is invalid.</p>
+<p>Returns a 403 if the account's email address is not verified.</p>
+<p>Returns a 404 if there is no matching subscriber.</p>
+<p>The 403, 404, and 200 responses may optionally have a
+<code>govuk_account_session</code> response field, which should replace the value
+in the user's session.</p>
 <h2 id="healthcheck">Healthcheck</h2>
 <p>A queue health check endpoint is available at <code>/healthcheck</code>.</p>
 <pre lang="json"><code>{
