--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.derby.gov.uk">Derby City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cheshireeast.gov.uk">Cheshire East Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.merton.gov.uk/">London Borough of Merton Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cookstown.gov.uk/">Cookstown District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.workplacepensions.gov.uk/">Workplace Pensions</a></li>
-<li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.e-lindsey.gov.uk">East Lindsey District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hertsdirect.org/">Hertfordshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.warwickshire.gov.uk/">Warwickshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.middevon.gov.uk">Mid Devon District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.barking-dagenham.gov.uk">London Borough of Barking and Dagenham Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
