--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="http://www.medway.gov.uk" class="govuk-link">Medway Council</a></li>
+      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
+      <li><a href="http://www.lbhf.gov.uk/" class="govuk-link">London Borough of Hammersmith and Fulham Council</a></li>
+      <li><a href="http://www.renfrewshire.gov.uk" class="govuk-link">Renfrewshire Council</a></li>
       <li><a href="http://www.york.gov.uk" class="govuk-link">York City Council</a></li>
-      <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
-      <li><a href="http://www.derbyshire.gov.uk" class="govuk-link">Derbyshire County Council</a></li>
-      <li><a href="http://www.portsmouth.gov.uk" class="govuk-link">Portsmouth City Council</a></li>
-      <li><a href="http://www.ryedale.gov.uk" class="govuk-link">Ryedale District Council</a></li>
-      <li><a href="http://www.oadby-wigston.gov.uk" class="govuk-link">Oadby and Wigston Borough Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
-      <li><a href="http://www.wyrebc.gov.uk/" class="govuk-link">Wyre Borough Council</a></li>
-      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
-      <li><a href="http://www.hounslow.gov.uk" class="govuk-link">London Borough of Hounslow Council</a></li>
+      <li><a href="http://www.oxford.gov.uk" class="govuk-link">Oxford City Council</a></li>
+      <li><a href="https://www.gov.uk/alerts/when-you-get-an-alert" class="govuk-link">When you get an emergency alert</a></li>
+      <li><a href="http://www.northdown.gov.uk" class="govuk-link">North Down Borough Council</a></li>
+      <li><a href="http://www.hastings.gov.uk" class="govuk-link">Hastings Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
