--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-uk-supports-world-day-against-the-death-penalty-day-10th-october-2013--2">The UK Supports World Day Against the Death Penalty Day- 10th October 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/police-conference-opening">Police conference opening</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/big-ideas-get-them-off-the-ground-in-the-uk--2">Big ideas? Get them off the ground in the UK</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/226373.pt">Declaração dos Líderes do G-7 sobre a Ucrânia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--21">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/215108.es-419">Islas Falklands</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233491.pt">Lord Mayor Fiona Woolf visita o Brasil para promover cooperação</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/disruption-to-emergency-contact-numbers-for-consular-assistance--3">Disruption to emergency contact numbers for consular assistance in Portugal</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/falkland-islanders-make-case-for-self-determination-in-honduras">Falkland Islanders make case for self-determination in Honduras</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/271974.es-419">Concluye exitosamente la Visita Real en Monterrey</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-statement-on-the-death-of-nelson-mandela">Foreign Secretary statement on the death of Nelson Mandela</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--14">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/247944.it">L’Italia agli Invictus Games</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/179024.lt">Siekiant taikos Artimuosiuose Rytuose ir Š.Afrikoje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--5">Turks and Caicos post-Cabinet update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/glasgow-2014-commonwealth-games-to-start-tomorrow--2">Glasgow 2014 Commonwealth Games to start tomorrow</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263630.pt">Dia Mundial contra a Pena de Morte - Declaração Conjunta</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-british-embassy-in-havana-has-a-vacancy--2">Job opportunities at the British Embassy in Havana</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
